darken the bg of about me just a touch to prevent flicker on lcd

--- a/css/michael.css
+++ b/css/michael.css
@@ -48,7 +48,7 @@ p {
   margin-top: 20px;
   margin-right: 260px;
   padding: 0 10px 5px 10px;
-  background-color: #252525;
+  background-color: #242424;
 }
 
 #sidebarwrapper {
